fix hero layout overflow

--- a/menu1.css
+++ b/menu1.css
@@ -134,7 +134,6 @@ main h1, h2, h3 {
 	padding: 0;
 	color: var(--primary);
 	width: 100%;
-	height: 1em;
 }
 
 main h1 {
