--- a/oneshore.css
+++ b/oneshore.css
@@ -35,7 +35,7 @@ section.hero {
 section.hero h2 {
     border: 0;
     padding-top: 1rem;
-    padding-bottom: 3rem;
+    padding-bottom: 2rem;
     text-decoration: none;
     font-family: verdana;
     font-size: 60px;
